<resources>
    <string name="app_name">FinallyApplication</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="title">请阅读并同意以下协议</string>
    <string name="context">为保障您的个人信息安全，使用登录功能需要您先阅读并同意《用户服务协议及《隐私政策》</string>
    <string name="tip_account">请输入用户账号</string>
    <string name="tip_password">请输入密码</string>
    <string name="retip_password">请再次输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help1">该应用播放音乐为本地音乐，若出现歌曲文件丢失的情况下，需要重新添加音乐文件。</string>
    <string name="help2">导致本音乐文件不存在可能出现有以下几点原因：</string>
    <string name="help3">1.模拟器SD卡加载失败；</string>
    <string name="help4">2.在文件目录管理时，误将歌曲删除。</string>
</resources>
