<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:text="@string/title"
        android:textColor="#F4F8F8"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/context"
        app:layout_constraintStart_toStartOf="@+id/context"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/context"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/context"
        android:textColor="#F4F8F8"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <Button
        android:id="@+id/disagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:text="@string/disagree"
        app:layout_constraintEnd_toStartOf="@+id/agree"
        app:layout_constraintTop_toBottomOf="@+id/context" />

    <Button
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/agree"
        app:layout_constraintEnd_toEndOf="@+id/context"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>